[gd_scene load_steps=30 format=2]

[ext_resource path="res://ParallaxBackgroundScrolling.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/menu/grid.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/TheJewishBitmap/TheJewishBitmap.otf" type="DynamicFontData" id=3]
[ext_resource path="res://ScoreScreen.gd" type="Script" id=4]
[ext_resource path="res://ShaderEffectChanger.gd" type="Script" id=5]
[ext_resource path="res://assets/images/ui/menu/play_button.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/menu/exit_button_highlight.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/menu/play_button_highlight.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/menu/exit_button.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/menu/exit_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/menu/play_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/menu/repair_button.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ui/menu/repair_button_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ui/menu/reload_button.png" type="Texture" id=14]
[ext_resource path="res://assets/images/ui/menu/repair_button_highlight.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ui/menu/reload_button_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/images/ui/menu/reload_button_highlight.png" type="Texture" id=17]
[ext_resource path="res://assets/images/ui/menu/ammo_purchase_button.png" type="Texture" id=18]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=5]
size = 65
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float barRange : hint_range(0.0, 0.1) = 0.01;
uniform float barOffsetIntensity : hint_range(0.0, 0.01) = 0.000;
uniform float noiseQuality : hint_range(1.0, 5000) = 500;
uniform float noiseIntensity : hint_range(0.0, 0.03) = 0.000;
uniform float colorOffsetIntensity : hint_range(0.0, 2.0) = 0.175;
uniform float redMultiplier : hint_range(0.0, 0.01) = 0.006;
uniform float redIntensity : hint_range(0.0, 1.0) = 1.0;
uniform float greenMultiplier : hint_range(0.0, 0.01) = 0.0073;
uniform float greenIntensity : hint_range(0.0, 1.0) = 0.97;


float rand(vec2 co)
{
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
}

float verticalBar(float pos, float uvY, float offset)
{
    float edge0 = (pos - barRange);
    float edge1 = (pos + barRange);

    float x = smoothstep(edge0, pos, uvY) * offset;
    x -= smoothstep(pos, edge1, uvY) * offset;
    return x;
}

void fragment()
{
	float uvX, uvY;
	uvX = UV.x;
	uvY = UV.y;
    for (float i = 0.0; i < 0.71; i += 0.1313)
    {
        float d = mod(TIME * i, 1.7);
        float o = sin(1.0 - tan(TIME * 0.24 * i));
    	o *= barOffsetIntensity;
        uvX += verticalBar(d, uvY, o);
    }

    uvY *= noiseQuality;
    uvY = float(int(uvY)) * (1.0 / noiseQuality);
    float noise = rand(vec2(TIME * 0.00001, uvY));
	uvX += (noise * noiseIntensity)/15.0;

    vec2 offsetR = vec2(redMultiplier * sin(TIME * redIntensity), 0.0) * colorOffsetIntensity;
    vec2 offsetG = vec2(greenMultiplier * cos(TIME * greenIntensity), 0.0) * colorOffsetIntensity;

	vec2 uv = vec2(uvX, 1.0-uvY);
    float r = texture(SCREEN_TEXTURE, uv + offsetR).r;
    float g = texture(SCREEN_TEXTURE, uv + offsetG).g;
    float b = texture(SCREEN_TEXTURE, uv).b;

    COLOR = vec4(r, g, b, 1.0);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/barRange = 0.022
shader_param/barOffsetIntensity = 0.002
shader_param/noiseQuality = 2410.59
shader_param/noiseIntensity = 0.015
shader_param/colorOffsetIntensity = 0.373
shader_param/redMultiplier = 0.002
shader_param/redIntensity = 0.133
shader_param/greenMultiplier = 0.002
shader_param/greenIntensity = 0.13

[sub_resource type="DynamicFont" id=8]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 200
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 60
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="Score Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 0.75, 0.75 )
transform = Transform2D( 0.75, 0, 0, 0.75, 0, 0 )
scroll_base_scale = Vector2( 3, 1 )
script = ExtResource( 1 )

[node name="BackLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 4000 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/BackLayer"]
show_behind_parent = true
margin_left = -605.0
margin_top = -726.0
margin_right = 7395.0
margin_bottom = 7274.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
color = Color( 0, 0, 0, 1 )

[node name="GridLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4000, 4000 )

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer"]
margin_left = -602.776
margin_top = -721.705
margin_right = 3397.22
margin_bottom = 3278.3
texture = ExtResource( 2 )

[node name="GridLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.14902 )
motion_scale = Vector2( -0.5, 1 )
motion_mirroring = Vector2( 4000, 4000 )

[node name="Grid" type="TextureRect" parent="ParallaxBackground/GridLayer2"]
margin_left = -602.776
margin_top = -721.705
margin_right = 3397.22
margin_bottom = 3278.3
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -97.8494
margin_right = 747.0
margin_bottom = -31.8494
custom_fonts/font = SubResource( 5 )
text = "Extraction Successful"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.3165
margin_bottom = -10.3165
rect_min_size = Vector2( 10, 15 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.671
margin_bottom = -29.671
rect_min_size = Vector2( 10, 5 )

[node name="PlayerKills" type="Label" parent="."]
margin_left = 15.0494
margin_top = 461.682
margin_right = 252.049
margin_bottom = 497.682
custom_fonts/font = SubResource( 2 )
text = "Player Kills: "

[node name="EarnedCredits" type="Label" parent="."]
margin_left = 15.0494
margin_top = 419.59
margin_right = 316.049
margin_bottom = 459.59
custom_fonts/font = SubResource( 6 )
text = "Earned Credits: "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ShaderEffects/Tween")

[node name="ShaderEffects" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="ShaderEffects"]
playback_speed = 0.2
playback/speed = 0.2

[node name="VCREffect" type="ColorRect" parent="ShaderEffects"]
visible = false
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 496.109
margin_top = 17.245
margin_right = 3091.11
margin_bottom = 2221.24
rect_scale = Vector2( 0.2, 0.2 )
custom_constants/separation = 75

[node name="RightArmBox" type="HBoxContainer" parent="VBoxContainer2"]
margin_right = 2595.0
margin_bottom = 200.0
custom_constants/separation = 50
alignment = 2

[node name="RightArmLabel" type="Label" parent="VBoxContainer2/RightArmBox"]
margin_left = 486.0
margin_top = 24.0
margin_right = 1771.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "Right Arm Ammo - "
align = 2
valign = 1

[node name="RightArmAmmo" type="Label" parent="VBoxContainer2/RightArmBox"]
margin_left = 1821.0
margin_top = 24.0
margin_right = 2045.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "N/A"
align = 2
valign = 1

[node name="RABuy" type="TextureButton" parent="VBoxContainer2/RightArmBox"]
margin_left = 2095.0
margin_right = 2595.0
margin_bottom = 200.0
texture_normal = ExtResource( 18 )

[node name="RACost" type="Label" parent="VBoxContainer2"]
margin_top = 275.0
margin_right = 2595.0
margin_bottom = 426.0
custom_fonts/font = SubResource( 11 )
text = "0c"
align = 2

[node name="LeftArmBox" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 501.0
margin_right = 2595.0
margin_bottom = 701.0
custom_constants/separation = 50
alignment = 2

[node name="LeftArmLabel" type="Label" parent="VBoxContainer2/LeftArmBox"]
margin_left = 570.0
margin_top = 24.0
margin_right = 1771.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "Left Arm AmmO - "
align = 2

[node name="LeftArmAmmo" type="Label" parent="VBoxContainer2/LeftArmBox"]
margin_left = 1821.0
margin_top = 24.0
margin_right = 2045.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "N/A"
align = 2

[node name="LABuy" type="TextureButton" parent="VBoxContainer2/LeftArmBox"]
margin_left = 2095.0
margin_right = 2595.0
margin_bottom = 200.0
texture_normal = ExtResource( 18 )

[node name="LACost" type="Label" parent="VBoxContainer2"]
margin_top = 776.0
margin_right = 2595.0
margin_bottom = 927.0
custom_fonts/font = SubResource( 11 )
text = "0c"
align = 2

[node name="RightShoulderBox" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 1002.0
margin_right = 2595.0
margin_bottom = 1202.0
custom_constants/separation = 50
alignment = 2

[node name="RightShoulderLabel" type="Label" parent="VBoxContainer2/RightShoulderBox"]
margin_left = 122.0
margin_top = 24.0
margin_right = 1771.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "Right Shoulder AmmO - "
align = 2

[node name="RightShoulderAmmo" type="Label" parent="VBoxContainer2/RightShoulderBox"]
margin_left = 1821.0
margin_top = 24.0
margin_right = 2045.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "N/A"
align = 2

[node name="RSBuy" type="TextureButton" parent="VBoxContainer2/RightShoulderBox"]
margin_left = 2095.0
margin_right = 2595.0
margin_bottom = 200.0
texture_normal = ExtResource( 18 )

[node name="RSCost" type="Label" parent="VBoxContainer2"]
margin_top = 1277.0
margin_right = 2595.0
margin_bottom = 1428.0
custom_fonts/font = SubResource( 11 )
text = "0c"
align = 2

[node name="LeftShoulderBox" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 1503.0
margin_right = 2595.0
margin_bottom = 1703.0
custom_constants/separation = 50
alignment = 2

[node name="LeftShoulderLabel" type="Label" parent="VBoxContainer2/LeftShoulderBox"]
margin_left = 206.0
margin_top = 24.0
margin_right = 1771.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 8 )
text = "Left Shoulder AmmO - "
align = 2

[node name="LeftShoulderAmmo" type="Label" parent="VBoxContainer2/LeftShoulderBox"]
margin_left = 1821.0
margin_top = 24.0
margin_right = 2045.0
margin_bottom = 175.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 8 )
text = "N/A"
align = 2

[node name="LSBuy" type="TextureButton" parent="VBoxContainer2/LeftShoulderBox"]
margin_left = 2095.0
margin_right = 2595.0
margin_bottom = 200.0
texture_normal = ExtResource( 18 )

[node name="LSCost" type="Label" parent="VBoxContainer2"]
margin_top = 1778.0
margin_right = 2595.0
margin_bottom = 1929.0
custom_fonts/font = SubResource( 11 )
text = "0c"
align = 2

[node name="ArmorBox" type="HBoxContainer" parent="VBoxContainer2"]
margin_top = 2004.0
margin_right = 2595.0
margin_bottom = 2204.0
alignment = 2

[node name="RemainingArmorLabel" type="Label" parent="VBoxContainer2/ArmorBox"]
margin_left = 1558.0
margin_right = 2330.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "Armor - "
align = 2

[node name="RemainingArmor" type="Label" parent="VBoxContainer2/ArmorBox"]
margin_left = 2334.0
margin_right = 2595.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 10 )
text = "100"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.015
anchor_top = 0.025
anchor_right = 0.015
anchor_bottom = 0.025
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 730.0
margin_bottom = 720.0
grow_vertical = 0
custom_constants/separation = 100

[node name="ReloadButton2" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_right = 730.0
margin_bottom = 105.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_focused = ExtResource( 17 )

[node name="descriptor" type="Label" parent="HBoxContainer/VBoxContainer/ReloadButton2"]
margin_left = 20.0
margin_top = 109.0
margin_right = 730.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 10 )
custom_fonts/font = SubResource( 7 )
text = "Restock Munitions."

[node name="ReloadCost" type="Label" parent="HBoxContainer/VBoxContainer/ReloadButton2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.876
margin_top = -0.105103
margin_right = -0.875977
margin_bottom = 59.8949
rect_pivot_offset = Vector2( 160.466, 0.0320892 )
custom_fonts/font = SubResource( 9 )
text = "00000C"
align = 2
valign = 2

[node name="RepairButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 730.0
margin_bottom = 310.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 15 )

[node name="descriptor" type="Label" parent="HBoxContainer/VBoxContainer/RepairButton"]
margin_left = 20.0
margin_top = 109.0
margin_right = 730.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 10 )
custom_fonts/font = SubResource( 7 )
text = "Repair hardware/wetware. "

[node name="RepairCost" type="Label" parent="HBoxContainer/VBoxContainer/RepairButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.876
margin_top = 0.627686
margin_right = 4.12402
margin_bottom = 60.6277
rect_pivot_offset = Vector2( 160.466, 0.0320892 )
custom_fonts/font = SubResource( 9 )
text = "00000C"
align = 2
valign = 2

[node name="ContinueButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 730.0
margin_bottom = 515.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="descriptor" type="Label" parent="HBoxContainer/VBoxContainer/ContinueButton"]
margin_left = 20.0
margin_top = 109.0
margin_right = 730.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 10 )
custom_fonts/font = SubResource( 7 )
text = "Continue sortie."

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 615.0
margin_right = 730.0
margin_bottom = 720.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )

[node name="descriptor" type="Label" parent="HBoxContainer/VBoxContainer/ExitButton"]
margin_left = 20.0
margin_top = 109.0
margin_right = 730.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 10 )
custom_fonts/font = SubResource( 7 )
text = "return from sortie."

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
margin_left = 745.0
margin_right = 765.0
margin_bottom = 720.0
rect_min_size = Vector2( 20, 0 )

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer"]
margin_left = 780.0
margin_right = 810.0
margin_bottom = 720.0
rect_min_size = Vector2( 30, 0 )

[node name="ColorRect3" type="ColorRect" parent="HBoxContainer"]
margin_left = 825.0
margin_right = 925.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="VBoxContainer2/RightArmBox/RABuy" to="." method="_on_RABuy_pressed"]
[connection signal="pressed" from="VBoxContainer2/LeftArmBox/LABuy" to="." method="_on_LABuy_pressed"]
[connection signal="pressed" from="VBoxContainer2/RightShoulderBox/RSBuy" to="." method="_on_RSBuy_pressed"]
[connection signal="pressed" from="VBoxContainer2/LeftShoulderBox/LSBuy" to="." method="_on_LSBuy_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ReloadButton2" to="." method="_on_ReloadButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/RepairButton" to="." method="_on_RepairButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
